--- a/django_job_master/templates/partials/_navbar.html
+++ b/django_job_master/templates/partials/_navbar.html
@@ -19,9 +19,9 @@
                 <nav class="mx-auto site-navigation">
                     <ul class="site-menu js-clone-nav d-none d-xl-block ml-0 pl-0">
                         <li><a href="/" class="nav-link active">Home</a></li>
-                        <li><a href="job-listings.html">Job Listings</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="services.html">Services</a></li>
+                        <li><a href="{% url 'job_portal:job_listing' %}">Job Listings</a></li>
+                        <li><a href="{% url 'job_portal:about' %}">About</a></li>
+                        <li><a href="{% url 'job_portal:service' %}">Services</a></li>
                         <li><a href="blog.html">Blog</a></li>
                         <li class="d-lg-none"><a href="contact.html">Contact Us</a></li>
                     </ul>
