--- a/django_job_master/templates/apply_job_form.html
+++ b/django_job_master/templates/apply_job_form.html
@@ -46,24 +46,8 @@
                     </div>
 
                     <div class="row form-group">
-
                         <div class="col-md-12">
-                            <label class="text-black" for="subject">Subject</label>
-                            <input type="subject" id="subject" class="form-control">
-                        </div>
-                    </div>
-
-                    <div class="row form-group">
-                        <div class="col-md-12">
-                            <label class="text-black" for="message">Message</label>
-                            <textarea name="message" id="message" cols="30" rows="7" class="form-control"
-                                      placeholder="Write your notes or questions here..."></textarea>
-                        </div>
-                    </div>
-
-                    <div class="row form-group">
-                        <div class="col-md-12">
-                            <input type="submit" value="Send Message" class="btn btn-primary btn-md text-white">
+                            <input type="submit" value="Submit" class="btn btn-primary btn-md text-white">
                         </div>
                     </div>
 
